syntax = "proto3";

package test;

option go_package = "./;test";

service TestService {
  rpc Test(TestRequest) returns (TestResponse) {}
}

message TestRequest {
  string test_string_data = 1;
  int32 test_int_data = 2;
  bool test_bool_data3 = 3;
}

message TestResponse {
  string result = 1;
}
